crates/core-executor/src/tests/snapshots/query_alter_iceberg_table.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"ALTER ICEBERG TABLE test ADD col INT;\""
---
Err(
    "Error: Table test not found in schema public in database embucket",
)
