crates/core-executor/src/tests/snapshots/query_context_name_injection.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SHOW TABLES IN new_schema\""
info: "Setup queries: CREATE SCHEMA embucket.new_schema; SET schema = 'new_schema'; CREATE table new_table (id INT)"
---
Ok(
    [
        "+------------+-----------+-------+---------------+-------------+",
        "| created_on | name      | kind  | database_name | schema_name |",
        "+------------+-----------+-------+---------------+-------------+",
        "|            | new_table | TABLE | embucket      | new_schema  |",
        "+------------+-----------+-------+---------------+-------------+",
    ],
)
