crates/core-executor/src/tests/snapshots/query_create_or_replace_view.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT * FROM view\""
info: "Setup queries: CREATE OR REPLACE VIEW view AS\n        SELECT * FROM (VALUES ('2021-03-02 15:55:18.539000'::TIMESTAMP)) AS t(start_tstamp);"
---
Ok(
    [
        "+-------------------------+",
        "| start_tstamp            |",
        "+-------------------------+",
        "| 2021-03-02T15:55:18.539 |",
        "+-------------------------+",
    ],
)
