crates/core-executor/src/tests/snapshots/query_create_table_and_insert.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT * FROM embucket.public.test\""
info: "Setup queries: CREATE TABLE embucket.public.test (id INT); INSERT INTO embucket.public.test VALUES (1), (2)"
snapshot_kind: text
---
Ok(
    [
        "+----+",
        "| id |",
        "+----+",
        "| 1  |",
        "| 2  |",
        "+----+",
    ],
)
