crates/core-executor/src/tests/snapshots/query_create_table_with_casting_timestamp.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"CREATE OR REPLACE TABLE t1 AS\n        SELECT * FROM (VALUES ('2021-03-02 15:55:18.539000'::TIMESTAMP)) AS t(start_tstamp);\""
---
Ok(
    [
        "+-------+",
        "| count |",
        "+-------+",
        "| 1     |",
        "+-------+",
    ],
)
