crates/core-executor/src/tests/snapshots/query_describe_table.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"DESCRIBE TABLE employee_table\""
---
Ok(
    [
        "+---------------+-------+-------+",
        "| name          | type  | null? |",
        "+---------------+-------+-------+",
        "| employee_id   | Int32 | YES   |",
        "| last_name     | Utf8  | YES   |",
        "| first_name    | Utf8  | YES   |",
        "| department_id | Int32 | YES   |",
        "+---------------+-------+-------+",
    ],
)
