crates/core-executor/src/tests/snapshots/query_drop_database.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"DROP DATABASE embucket\""
---
Ok(
    [
        "+--------+",
        "| status |",
        "+--------+",
        "+--------+",
    ],
)
