crates/core-executor/src/tests/snapshots/query_drop_database_error_in_use.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"DROP DATABASE embucket\""
---
Err(
    "Error: Failed to drop catalog: Metastore error: Database in use by schema(s): public",
)
