crates/core-executor/src/tests/snapshots/query_drop_schema_quoted_identifiers.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SHOW SCHEMAS IN embucket STARTS WITH 'test'\""
info: "Setup queries: CREATE SCHEMA embucket.\"test public\"; DROP SCHEMA embucket.\"test public\""
---
Ok(
    [
        "++",
        "++",
    ],
)
